--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,3 @@
-# List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - init: pip3 install -r resources/requirements.txt
-    command: python3 resources/main.py
+  - init: npm install
+    command: npm run start
