feat: Refactor API and project structure (#2)
Add controllers
Improve logging
Break Twilio handlers into functions from classes
Add Security file
Added prettier dependency
Improve Gitpod dev
Change LICENCE

--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "twilio-project",
   "version": "1.2.0",
-  "description": "Twilio project",
+  "description": "A simple project to send SMS using Twilio API and Post request.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "format": "prettier --write .",
+    "env": "cp .env.example .env"
   },
   "keywords": [
     "Twilio",
-    "Node"
+    "Node",
+    "Express",
+    "SMS"
   ],
   "author": "Pradumna Saraf",
   "license": "MIT",
@@ -21,6 +25,7 @@
     "twilio": "^3.80.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "prettier": "^2.8.4"
   }
 }
