--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,17 @@
 tasks:
-  - init: npm install
-    command: npm run start
+  - name: Server
+    init: |
+      npm ci
+      npm run env
+    command:   
+      npm run dev
+      
+github:
+  prebuilds:
+    master: true
+    branches: true
+    pullRequests: true
+    pullRequestsFromForks: true
+    addCheck: true
+    addComment: false
+    addBadge: true
