--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twilio-project",
+  "name": "post-my-message",
   "version": "1.3.0",
   "description": "A simple project to send SMS using Twilio API and Post request.",
   "main": "index.js",
