--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twilio-project",
+  "name": "post-my-message",
   "version": "1.3.0",
   "description": "A simple project to send SMS using Twilio API and Post request.",
   "main": "index.js",
@@ -7,7 +7,9 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "format": "prettier --write .",
-    "env": "cp .env.example .env"
+    "env": "cp .env.example .env",
+    "dev:docker": "npm run env && npm run dev"
+
   },
   "keywords": [
     "Twilio",
