--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "SMS"
   ],
   "author": "Pradumna Saraf",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "dependencies": {
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
