Revert "change the licence from 'MIT' to 'GPL-3.0'"
This reverts commit 71eab2d702858a6a9fe895055e28c01028cb7cf0.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "SMS"
   ],
   "author": "Pradumna Saraf",
-  "license": "GPL-3.0",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
