--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 TWILIO_ACCOUNT_SID=xxxxxxxxxxxxxxxxxxxxxxxxx
 TWILIO_AUTH_TOKEN=axxxxxxxxxxxxxxxxxxxxxx
-TWILIO_FROM_NUMBER=+111111111111111 //Number should include + and the county code
+TWILIO_FROM_NUMBER=+111111111111111 #Number should include + and the county code
