--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "eslint": "^8.43.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
